# la-geography

./: .gitignore  API_DEPLOYED.md  CUSTOM_DOMAIN_SUCCESS.md  IMPLEMENTATION_NOTES.md  Makefile  PLANNING.md  README.md  main.py  pyproject.toml  requirements.txt
config/: layers.yml
docs/: API.md  AVAILABLE_LAYERS.md  CENSUS_ANALYSIS.md  CENSUS_FIELDS.md  CENSUS_SETUP.md  CENSUS_TESTING.md  FETCH_RESULTS.md  LA_REGIONS.md  QGIS_REVIEW_CITIES.md  README.md  STATUS.md
lambda/: .gitignore  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  QUICKSTART.md  README.md  setup_custom_domain.sh  template.yaml
lambda/examples/: README.md  batch_lookup.py  sample_locations.csv  test_api.py
lambda/layers/: README.md  USE_PUBLIC_LAYER.md  build_layer.sh  build_minimal_layer.sh  build_simple_layer.sh
lambda/lookup/: __init__.py  config.py  handler.py  handler_geopandas.py  requirements.txt
lambda/tests/: __init__.py  pytest.ini  test_handler.py
notebooks/: neighborhoods.ipynb
scripts/: analyze_demographics.py  apportion_census.py  census_stats.py  data_loader.py  fetch_boundaries.py  fetch_census.py  geo_utils.py  process_raw.py  s3_sync.py  validate_apportionment.py
tests/: test_lambda_new_layers.py  test_new_layers.py
