[project]
name = "la-geography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezesri>=0.3.2",
    "geopandas>=1.1.1",
    "jupyterlab>=4.4.10",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]
